tests/test-files/package.txt
================================================================================
1 Minimal package
================================================================================

(package coalton-unit-test/lib-example-simple)

--------------------------------------------------------------------------------

================================================================================
2 Package with imports and exports
================================================================================

(package coalton-unit-test/lib-example-complex
  (import
    coalton-library/classes
    (coalton-library/hash as hash))
  (import-from
    coalton-library/list
    filter)
  (export
    first
    second
    third))

--------------------------------------------------------------------------------

================================================================================
3 Missing package name
================================================================================

(package)

--------------------------------------------------------------------------------

error: Malformed package declaration
  --> test:1:8
   |
 1 |  (package)
   |          ^ missing package name

================================================================================
4 Unknown package clause
================================================================================

(package test
  (xxx yyy zzz))

--------------------------------------------------------------------------------

error: Malformed package declaration
  --> test:2:3
   |
 2 |    (xxx yyy zzz))
   |     ^^^ Unknown package clause
help: Must be one of IMPORT, IMPORT-FROM, EXPORT, SHADOW
 2 |   (xxx yyy zzz))
   |    ---

================================================================================
5 Empty import clause
================================================================================

(package test
  (import))

--------------------------------------------------------------------------------

error: Malformed package declaration
  --> test:2:9
   |
 2 |    (import))
   |           ^ empty IMPORT form

================================================================================
6 Illegal type in import clause
================================================================================

(package test
  (import 1.0))

--------------------------------------------------------------------------------

error: Malformed package declaration
  --> test:2:10
   |
 2 |    (import 1.0))
   |            ^^^ expected PACKAGE or (PACKAGE as NICK)

================================================================================
7 Illegal import as form
================================================================================

(package test
  (import (something sa s)))

--------------------------------------------------------------------------------

error: Malformed package declaration
  --> test:2:21
   |
 2 |    (import (something sa s)))
   |                       ^^ expected AS

================================================================================
8 Incomplete import as form
================================================================================

(package test
  (import (something as)))

--------------------------------------------------------------------------------

error: Malformed package declaration
  --> test:2:23
   |
 2 |    (import (something as)))
   |                         ^ missing package nickname

================================================================================
9 Shadow clause is accepted
================================================================================

(package test
  (shadow and xor))

--------------------------------------------------------------------------------

================================================================================
10 Missing dependencies
================================================================================

(package coalton-unit-test/package-c
  (import coalton-unit-test/package-d))

--------------------------------------------------------------------------------

error: Malformed package declaration
  --> test:1:0
   |
 1 |   (package coalton-unit-test/package-c
   |  _^
 2 | |   (import coalton-unit-test/package-d))
   | |_______________________________________^ unable to evaluate package definition


================================================================================
11 Invalid package name
================================================================================

(package 5)

--------------------------------------------------------------------------------

error: Malformed package declaration
  --> test:1:9
   |
 1 |  (package 5)
   |           ^ package name must be a symbol

================================================================================
12 Malformed clause
================================================================================

(package test-package 1)

--------------------------------------------------------------------------------

error: Malformed package declaration
  --> test:1:22
   |
 1 |  (package test-package 1)
   |                        ^ malformed package clause

================================================================================
13 Invalid package declaration
================================================================================

(pancake test)

--------------------------------------------------------------------------------

error: Malformed package declaration
  --> test:1:1
   |
 1 |  (pancake test)
   |   ^^^^^^^ package declarations must start with `package`

================================================================================
14 Invalid shadow clause
================================================================================

(package test
  (shadow ()))

--------------------------------------------------------------------------------

error: Malformed package declaration
  --> test:2:10
   |
 2 |    (shadow ()))
   |            ^^ expected symbol

================================================================================
15 Unterminated package form
================================================================================

(package test
  (import (something as s))

--------------------------------------------------------------------------------

error: Unterminated form
  --> test:1:0
   |
 1 |   (package test
   |  _^
 2 | |   (import (something as s))
   | |___________________________^ Missing close parenthesis for form starting at offset 0
